--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ VITE_GEMINI_API_KEY=YOUR_GEMINI_API_KEY
 # VITE_GEMINI_LIVE_MODEL=gemini-2.5-flash-native-audio-latest
 # Optional: prebuilt voice for native-audio model
 # VITE_GEMINI_VOICE_NAME=Kore
+# Optional: judge result normalizer model
+# VITE_GEMINI_JUDGE_NORMALIZER_MODEL=gemini-2.5-flash
+# Optional: fallback judge model when live judge fails
+# VITE_GEMINI_JUDGE_FALLBACK_MODEL=gemini-2.5-flash
