--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,7 @@
 VITE_GEMINI_API_KEY=YOUR_GEMINI_API_KEY
 # Optional: frame capture seconds for verification (1-60, default 10)
 # VITE_CAPTURE_SECONDS=10
-# Optional: override live model
-# VITE_GEMINI_LIVE_MODEL=gemini-2.5-flash-native-audio-latest
-# Optional: prebuilt voice for native-audio model
-# VITE_GEMINI_VOICE_NAME=Kore
 # Optional: judge result normalizer model
 # VITE_GEMINI_JUDGE_NORMALIZER_MODEL=gemini-2.5-flash
-# Optional: fallback judge model when live judge fails
+# Optional: primary judge model
 # VITE_GEMINI_JUDGE_FALLBACK_MODEL=gemini-2.5-flash
