add gesture trigger

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 VITE_GEMINI_API_KEY=YOUR_GEMINI_API_KEY
 # Optional: frame capture seconds for verification (1-60, default 10)
 # VITE_CAPTURE_SECONDS=10
+# Optional: enable/disable finger-circle gesture trigger (default true)
+# VITE_GESTURE_TRIGGER_ENABLED=true
+# Optional: MediaPipe Tasks Vision wasm root
+# VITE_GESTURE_WASM_ROOT=https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@latest/wasm
+# Optional: Hand Landmarker model asset URL
+# VITE_GESTURE_MODEL_ASSET_PATH=https://storage.googleapis.com/mediapipe-models/hand_landmarker/hand_landmarker/float16/1/hand_landmarker.task
 # Optional: judge result normalizer model
 # VITE_GEMINI_JUDGE_NORMALIZER_MODEL=gemini-2.5-flash
 # Optional: primary judge model
