--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.42.0"
+    "@google/genai": "^1.42.0",
+    "@mediapipe/tasks-vision": "^0.10.32"
   },
   "devDependencies": {
     "typescript": "^5.9.3",
