--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,7 @@ VITE_GEMINI_API_KEY=YOUR_GEMINI_API_KEY
 # VITE_GESTURE_MODEL_ASSET_PATH=https://storage.googleapis.com/mediapipe-models/hand_landmarker/hand_landmarker/float16/1/hand_landmarker.task
 # Optional: judge result normalizer model
 # VITE_GEMINI_JUDGE_NORMALIZER_MODEL=gemini-2.5-flash
+# Optional: AI challenge generator model
+# VITE_GEMINI_CHALLENGE_MODEL=gemini-2.5-flash
 # Optional: primary judge model
 # VITE_GEMINI_JUDGE_FALLBACK_MODEL=gemini-2.5-flash
